--- a/ui/src/app/views/project/show/permission/permission.html
+++ b/ui/src/app/views/project/show/permission/permission.html
@@ -1,14 +1,23 @@
 <h3>
     {{ 'project_permission_list_title' | translate }}
 </h3>
-<app-permission-list [permissions]="project.groups" (event)="groupEvent($event)" [edit]="project.permissions.writable"></app-permission-list>
+<div *ngIf="project && groupsOutsideOrganization && groupsOutsideOrganization.length > 0" class="ui warning message">
+    Following groups that are not from organization
+    "{{project.organization}}" can read the project: <span
+        *ngFor="let gp of groupsOutsideOrganization;let i = index">{{gp.group.name}}
+        ({{gp.group.organization}}){{ i < groupsOutsideOrganization.length - 1 ? ', ' : '' }}</span>.
+</div>
+<app-permission-list [permissions]="project.groups" (event)="groupEvent($event)" [edit]="project.permissions.writable">
+</app-permission-list>
 <ng-container *ngIf="project.permissions.writable">
     <h3>{{ 'project_permission_form_title' | translate }}</h3>
-    <app-permission-form (createGroupPermissionEvent)="groupEvent($event)" [loading]="permFormLoading"></app-permission-form>
+    <app-permission-form (createGroupPermissionEvent)="groupEvent($event)" [loading]="permFormLoading">
+    </app-permission-form>
 </ng-container>
 <div *ngIf="loading" class="ui text active loader">{{'common_loading_environments' | translate}}...</div>
 <app-warning-modal [title]="_translate.instant('warning_modal_title')" [msg]="_translate.instant('warning_modal_body')"
     (event)="groupEvent($event, true)" #permWarning></app-warning-modal>
-<app-confirm-modal [title]="'project_permission_propagate_title' | translate" [msg]="'project_permission_propagate_question' | translate"
-    (event)="confirmPermPropagation($event)" #confirmPropagationModal>
+<app-confirm-modal [title]="'project_permission_propagate_title' | translate"
+    [msg]="'project_permission_propagate_question' | translate" (event)="confirmPermPropagation($event)"
+    #confirmPropagationModal>
 </app-confirm-modal>
