--- a/ui/src/app/views/workflowv3/run/workflowv3-run.scss
+++ b/ui/src/app/views/workflowv3/run/workflowv3-run.scss
@@ -43,6 +43,10 @@
     .infos {
         padding: 10px;
 
+        .right a {
+            text-decoration: none;
+        }
+
         .error {
             color: $darkTheme_red;
         }
